fixed countdown on mobile

--- a/misas-thai-street-cuisine-2.0/Layout/MainLayout.razor.css
+++ b/misas-thai-street-cuisine-2.0/Layout/MainLayout.razor.css
@@ -325,4 +325,8 @@
     .countdown-info-icon {
         font-size: 1rem;
     }
+
+    .countdown-line-1, .countdown-line-2 {
+        display: block;
+    }
 }
